--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-pandas 
-numpy 
-seaborn
-scikit-learn
-xgboost
-catboost
-dill
-catboost
-flask
-gunicorn
+flask==2.2.5
+gunicorn==21.2.0
+
+numpy==1.24.4
+pandas==1.5.3
+scikit-learn==1.3.2
+
+seaborn==0.12.2
+xgboost==1.7.6
+catboost==1.2.2
+dill==0.3.8
+
 
 # -e . 
 
